--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-{% include header.html %}
-
 <div class="content post">
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-date">
     <time>{{ page.date | date_to_string }}</time>
+    Tags: ruby, elixir
   </div>
   {{ content }}
 </div>
-{% if site.disqus_shortname %}
+
+{% if site.disqus %}
   {% include disqus_comments.html %}
 {% endif %}
