--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,17 @@
         </a>
         <h3>{{ site.name }}</h3>
         <p>{{ site.description }}</p>
+
+        <div class="tags_stat">
+          <h4>Tags</h4>
+          {% for tag in site.data.tags_stat %}
+          <p class="tag">
+            <a href="/tag/{{ tag[0] }}">
+              {{ tag[0] }} ({{ tag[1] }})
+            </a>
+          </p>
+          {% endfor %}
+        </div>
         <ul class="social">
             {% if site.github %}
             <a type="button" href="http://github.com/{{ site.github }}">
