--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,10 @@
         <h3>{{ site.name }}</h3>
         <p>{{ site.description }}</p>
 
+        <div class="links">
+          <a href="/about">ABOUT ME</a>
+        </div>
+
         <div class="tags_stat">
           <h4>Tags</h4>
           {% for tag in site.data.tags_stat %}
