--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
 
 <body>
     <div class="top"></div>
-    <div class="profile" style="background-image: url({{ site.background }});">
+    <div class="profile" style="background-image: url({{ site.baseurl }}/resources/sea2.jpg);">
         <a href="/">
-          <img src="{{ site.avatar }}" class="img-circle" />
+          <img src="{{ site.baseurl }}/resources/avatar.jpg" class="img-circle" />
         </a>
         <h3>{{ site.name }}</h3>
         <p>{{ site.description }}</p>
